aks/eshop-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: eshop-ingress
  namespace: github
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - githubaks.lfraile.net
    secretName: tls-secret
  rules:
  - host: githubaks.lfraile.net
    http:
      paths:
      - backend:
          serviceName: eshop-svc
          servicePort: 80
        path: /(.*)
